# vo-studio

./: .gitignore  CMakeLists.txt  LICENSE  README.org
src/: app.cpp  app.h  audio_engine.cpp  audio_engine.h  audio_list_panel.cpp  audio_list_panel.h  frame.cpp  frame.h  lufs_analyzer.cpp  lufs_analyzer.h  project_document.cpp  project_document.h  project_view.cpp  project_view.h  text_panel.cpp  text_panel.h  workspace.cpp  workspace.h
